many updates, working great
